testsuite/tests/gadt/records-fail1.stderr

records-fail1.hs:18:6: error: [GHC-58481] parse error on input ‘{’
